--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.50) UNRELEASED; urgency=low
+ikiwiki (1.50) unstable; urgency=low
 
   [ Josh Triplett ]
   * Add a graphviz plugin.
@@ -37,7 +37,7 @@ ikiwiki (1.50) UNRELEASED; urgency=low
   * Add .dpkg-tmp to prune regexp, so that if ikiwiki is run right as it's
     being upgraded by dpkg it will ignore dpkg temp files in the basewiki.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 15 Apr 2007 14:09:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Apr 2007 16:02:05 -0400
 
 ikiwiki (1.49) unstable; urgency=low
 
