--- a/doc/news/version_1.50.mdwn
+++ b/doc/news/version_1.50.mdwn
@@ -2,7 +2,8 @@ News for ikiwiki 1.50:
 
    Permalinks and guids in rss and atom feeds for wikis using the usedirs
    options will change in this release. If you have already enabled usedirs,
-   you may need to take steps to avoid flooding aggregators.
+   you may need to take steps to
+   [[avoid_flooding_aggregators|tips/howto_avoid_flooding_aggregators]].
 
 ikiwiki 1.50 released with [[toggle text="these changes"]]
 [[toggleable text="""
