* Support setting svnpath to "" for wikis that are rooted at the top of   their svn repositories, with no trunk directory.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.51) UNRELEASED; urgency=low
+
+  * Support setting svnpath to "" for wikis that are rooted at the top of
+    their svn repositories, with no trunk directory.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 15:07:21 -0400
+
 ikiwiki (1.50) unstable; urgency=low
 
   [ Josh Triplett ]
