--- a/doc/todo/discussion_page_as_blog.mdwn
+++ b/doc/todo/discussion_page_as_blog.mdwn
@@ -26,4 +26,6 @@ issue above. Worrying about threading may be overkill.
 
 I don't think that the nesting is very clear, I found it confusing..
 
+Would each page be its own individual blog? Or its own blog post? To me it seems like an entire wiki can be viewed as a blog, with threaded or unthreaded comments underneath.
+
 [[tag soc]]
