* Minor template improvements by Alessandro.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
 
   * Support setting svnpath to "" for wikis that are rooted at the top of
     their svn repositories, with no trunk directory.
+  * Minor template improvements by Alessandro.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 15:07:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 18 Apr 2007 19:35:29 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
