--- a/doc/users/hb.mdwn
+++ b/doc/users/hb.mdwn
@@ -1,6 +1,9 @@
 For now I'm using ikiwiki just for my personal needs :
+
 * gtd/todo management
 * time tracking
 * projects notes
 
 on 2 different laptops, not allways connected nor in sync ;)
+
+--hb (Hugues Bernard)
