web commit by http://willthompson.co.uk/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -110,3 +110,4 @@ Test.. I was looking for a wiki supporting OpenID~
 ----
 me too...
 
+[[if test="sandbox/C++" then="[[sandbox/C++]]" else="sad face!"]]
