web commit by JoshTriplett

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -6,6 +6,8 @@ testing openid ... ignore.
 
 Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
 
+Testing right-to-left text: (שרה) should be spelled shin (ש) resh (ר) heh (ה) from right to left.
+
 Here's a paragraph.
 
 Here's another one with *emphasised* text.
