--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -8,6 +8,8 @@ Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
 
 Testing right-to-left text: (שרה) should be spelled shin (ש) resh (ר) heh (ה) from right to left.
 
+Testing it in a comment...
+
 Here's a paragraph.
 
 Here's another one with *emphasised* text.
