web commit by JoshTriplett: Fix typos.

--- a/doc/todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism.mdwn
+++ b/doc/todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism.mdwn
@@ -5,7 +5,7 @@ applications comes from URIs and titles in the preferences, under
 `browser.contentHandlers.types.*`.  For the benefit of people who use
 [[plugins/aggregate]] as their feed reader, the ikiwiki CGI could expose a URI
 to directly add a new feed to the aggregated list; this would allow users to
-configure their browser to subscribe to feeds via [[plugin/aggregate]] running
+configure their browser to subscribe to feeds via [[plugins/aggregate]] running
 on their site.  We could then provide the manual configuration settings as a
 [[tip|tips]], and perhaps provide an extension or other mechanism to set them
 automatically. --[[JoshTriplett]]
