--- a/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
+++ b/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
@@ -1,1 +1,1 @@
-ikiwiki could provide one or more plugins that provide "add to" links for popular feed readers, such as Google Reader or netvibes. --[[JoshTriplett]]
+ikiwiki could provide one or more plugins that provide "add to" links for popular feed readers, such as Google Reader, Bloglines, My Yahoo!, or Netvibes. --[[JoshTriplett]]
