web commit by JoshTriplett: Note that [[todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism]] may make this less important.

--- a/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
+++ b/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
@@ -1,1 +1,4 @@
-ikiwiki could provide one or more plugins that provide "add to" links for popular feed readers, such as Google Reader, Bloglines, My Yahoo!, or Netvibes. --[[JoshTriplett]]
+ikiwiki could provide one or more plugins that provide "add to" links for popular feed readers, such as Google Reader, Bloglines, My Yahoo!, or Netvibes.
+
+Potentially less useful given an implementation of [[todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism]].
+--[[JoshTriplett]]
