--- a/doc/users.mdwn
+++ b/doc/users.mdwn
@@ -6,4 +6,5 @@ comments.
 
 List of users
 =============
-[[inline pages="users/* and !*/Discussion" feeds=no archive=yes sort=title template=titlepage]]
+[[inline pages="users/* and !*/Discussion" feeds=no archive=yes sort=title template=titlepage
+rootpage="users" postformtext="Add yourself as an ikiwiki user:"]]
