web commit by JoshTriplett: Add postformtext.

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -4,4 +4,4 @@ Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and !*/Discussion"
 feedpages="created_after(supporting_comments_via_disussion_pages)"
-actions=yes rootpage="todo" show=0]]
+actions=yes rootpage="todo" postformtext="Add a new todo item titled:" show=0]]
