Add [[meta title="Real Name"]] to all the user pages.  Feel free to remove yours if not desired.

--- a/doc/users/arpitjain.mdwn
+++ b/doc/users/arpitjain.mdwn
@@ -1,3 +1,5 @@
+[[meta title="Arpit Jain"]]
+
 This is Arpit Jain. 
 Currently doing my B.Tech/M.Tech in Computer Science and Engg. from IIT Kharagpur. 
 I would be working on [[todo/Gallery/]] project for ikiwiki this summers. 
