--- a/doc/users/joey.mdwn
+++ b/doc/users/joey.mdwn
@@ -1,3 +1,5 @@
+[[meta title="Joey Hess"]]
+
 Joey Hess is <a href="mailto:joey@kitenet.net">joey@kitenet.net</a>. 
 His web page is [here](http://kitenet.net/~joey/).
 
