--- a/doc/users/jonassmedegaard.mdwn
+++ b/doc/users/jonassmedegaard.mdwn
@@ -1,3 +1,5 @@
+[[meta title="Jonas Smedegaard"]]
+
 Jonas Smedegaard is a Debian developer, like joey. A big fan of this novel approach to wiki: serving as pages static!
 
 JonasSmedegaard maintains the packaging of another wiki - MoinMoin - for Debian, but is personally tired of the heavy burden of Python on his web servers.
