--- a/doc/users/chris.mdwn
+++ b/doc/users/chris.mdwn
@@ -1,3 +1,5 @@
+[[meta title="Chris Green"]]
+
 Chris is Chris Green, an ancient C/C++/Java programmer, I started around 1982 or 1983.
 
 I was programming even before that in assembler and things like that, I was first programming for a living in about 1970.
