web commit by JoshTriplett: wikilink, not wikilinks.

--- a/doc/bugs/Trailing_slash_breaks_links.mdwn
+++ b/doc/bugs/Trailing_slash_breaks_links.mdwn
@@ -1,4 +1,4 @@
-A trailing slash on a [[wikilink|wikilinks]] breaks the link:
+A trailing slash on a [[wikilink]] breaks the link:
 
 `\[[todo/Gallery/]]` appears as [[todo/Gallery/]].
 
