--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -108,3 +108,6 @@ Test.. I was looking for a wiki supporting OpenID~
 me too...
 
 [[if test="sandbox/C++" then="[[sandbox/C++]]" else="sad face!"]]
+
+----
+subscription test
