--- a/doc/users/arpitjain.mdwn
+++ b/doc/users/arpitjain.mdwn
@@ -1,7 +1,7 @@
 [[meta title="Arpit Jain"]]
 
 This is Arpit Jain. 
-Currently doing my B.Tech/M.Tech in Computer Science and Engg. from IIT Kharagpur. 
+Currently doing B.Tech/M.Tech in Computer Science and Engg. from IIT Kharagpur. 
 I would be working on [[todo/Gallery]] project for ikiwiki this summers. 
 
 More info about me can be found at <http://www.arpitjain.com>.
