web commit by http://id.inelegant.org/: Linked to my proposal.

--- a/doc/todo/fileupload.mdwn
+++ b/doc/todo/fileupload.mdwn
@@ -1,3 +1,5 @@
+(I've written a [[proposal|todo/fileupload/soc-proposal]] for this feature --Ben).
+
 Support for uploading files is useful for many circumstances:
 
 * Uploading images.
