--- a/doc/todo/fileupload/soc-proposal/discussion.mdwn
+++ b/doc/todo/fileupload/soc-proposal/discussion.mdwn
@@ -5,7 +5,12 @@ There's nothing in [[fileupload]] that suggests putting the file upload limit in
 It's not clear to me that the concept of attaching files to a page fits ikiwiki very well; unlike most wikis, ikiwiki supports subdirectories and [[SubPages|SubPage]], which allows for hierarchical placement of uploaded files, which is a much more flexible concept than simple attachment. Futhermore, the idea of listing all attached files at the bottom of a page seems somewhat inflexible. What if I want to make a podcast, using inline's existing support for that -- I won't want a list of every "attached" file at the bottom of my podcast's page then.
 
 > If a file was attached to _some-dir/some-page_, it would be stored in _some-dir/_ and linked from _some-page_. That would seem reasonably hierarchical to me. What do you suggest as an alternative? 
+
+>> I'd suggest `some-dir/some-page/file`, which nicely makes clear that the file is "attached" to some-page, allows easy wikilinks to "file" from some-page, and has other nice properties.
+
 > As for the attachment list, I envisaged that being optional. --Ben
+
+>> So some kind of preprocessor directive that is added to a page to generate the attachment list?
 
 I don't understand why the file size would need to be stored in the index file; this information is available by statting the file, surely? Similarly, the mime type can be determined through inspection, unless there turns out to be a reason to need to cache it for speed.
 
