--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -3,11 +3,15 @@
 This page includes information about ikiwiki's involvement in
 [Google Summer of Code](http://code.google.com/soc/).
 
-Also see the [[application_for_ikiwiki_as_a_Summer_of_Code_organization|application]].
+We started with a list of [[ideas]]. Our [[application]] was accepted, and
+the following projects will be worked on:
 
-List of Projects
-================
-
-This list includes pages, such as [[/todo]] items, tagged `soc`.  If you have a great idea for an ikiwiki project not on this list, please file it as a todo item, and ask us if it might work as a Summer of Code project, but please don't add the `soc` tag yourself.
-
-[[inline pages="link(soc) and !todo/done and !link(todo/done) and !bugs/done and !link(bugs/done) and !*/Discussion" actions=yes show=0]]
+* latex plugin input/output for ikiwiki  
+  by Patcick Winnertz
+* Implement File Upload Functionality and Image Gallery Creation  
+  by Ben Coffey  
+  (See [[todo/fileupload/soc-proposal]])
+* Wiki WYSIWYG Editor  
+  by Taylor Killian
+* Creating a gallery of a bunch of images  
+  by Aprit Jain
