--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -7,11 +7,11 @@ We started with a list of [[ideas]]. Our [[application]] was accepted, and
 the following projects will be worked on:
 
 * latex plugin input/output for ikiwiki  
-  by Patcick Winnertz
+  by Patrick Winnertz
 * Implement File Upload Functionality and Image Gallery Creation  
   by Ben Coffey  
   (See [[todo/fileupload/soc-proposal]])
 * Wiki WYSIWYG Editor  
   by Taylor Killian
 * Creating a gallery of a bunch of images  
-  by Aprit Jain
+  by [[ApritJain]]
