--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -14,4 +14,4 @@ the following projects will be worked on:
 * Wiki WYSIWYG Editor  
   by Taylor Killian
 * Creating a gallery of a bunch of images  
-  by [[ArpritJain]]
+  by [[ArpitJain]]
