--- a/doc/todo/supporting_comments_via_disussion_pages.mdwn
+++ b/doc/todo/supporting_comments_via_disussion_pages.mdwn
@@ -29,3 +29,7 @@ This would allow:
 Is this simple enough to be sensible?
 
 -- [[AdamShand]]
+
+I've been looking into this.  I'd like to implement a "blogcomments" plugin.  Looking at the code, I think the way to go is to have a formbuilder_setup hook that uses a different template instead of the standard editpage one.  That template would not display the editcontent field.  The problem that I'm running into is that I need to append the new content to the old one.
+
+-- [[MarceloMagallon]]
