web commit by http://ptecza.myopenid.com/: * My ikiwiki backports for Debian oldstable, because we still haven't upgrade Sarge to Etch

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -23,7 +23,7 @@ on stable, although to get the CGI stuff working on stable, you will need
 to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`,
 and libcgi-session-perl `4.14-1`
 
-There is also an unofficial backport of ikiwiki for Debian stable, provided by
+There is also an unofficial backport of ikiwiki for Debian 'sarge', provided by
 Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 
 # revision control
