--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,11 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Minor template improvements by Alessandro.
   * In mercurial backend, untaint ipaddr when using it as the user for the
     commit. Thanks, Alexander Wirt. Closes: #420428
+  * Fix aggregator to not warn when a feed contains no body content at all.
+  * Work around bug #420636 by, if XML::Parser crashes, running the feed
+    content though Encode::decode_utf8.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 22 Apr 2007 13:43:49 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Apr 2007 14:31:57 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
