--- a/doc/bugs/aggregate_plugin_errors/discussion.mdwn
+++ b/doc/bugs/aggregate_plugin_errors/discussion.mdwn
@@ -1,3 +1,6 @@
 I have the same problem here when I use a feed from googles shared feed. http://www.google.com/reader/public/atom/user/04715560304044435944/state/com.google/broadcast
 
 john
+
+> I cannot reproduce any problem with this feed. Can you provide details?
+> --[[Joey]]
