--- a/doc/todo/Fix_CSS_to_not_put_a_border_around_image_links.mdwn
+++ b/doc/todo/Fix_CSS_to_not_put_a_border_around_image_links.mdwn
@@ -3,3 +3,5 @@ Browsers, by default, put a link-colored border around images used as links:
 [![ikiwiki logo](http://ikiwiki.info/logo/ikiwiki.png)](http://ikiwiki.info)
 
 We should fix the CSS to not do that. --[[JoshTriplett]]
+
+[[todo/done]] --[[JoshTriplett]]
