web commit by http://adam.shand.net/

--- a/doc/bugs/aggregate_plugin_errors.mdwn
+++ b/doc/bugs/aggregate_plugin_errors.mdwn
@@ -29,6 +29,8 @@ feed I'm seeing this with is http://www.wirelesscommons.org/feed.php
 > best I can do in ikiwiki. I have filed a bug on XML::Parser about this,
 > it's [[debbug 420636]].  I've also put in a workaround, so [[done]].
 
+**Wonderful**, thanks Joey! -- Adam.
+
     -- System Information:
     Debian Release: 3.1
       APT prefers testing
