web commit by hb: typos

--- a/doc/todo/supporting_comments_via_disussion_pages.mdwn
+++ b/doc/todo/supporting_comments_via_disussion_pages.mdwn
@@ -43,7 +43,7 @@ Is this simple enough to be sensible?
 
 >> I certainly won't be fussy about how it gets implemented, I was just trying to think of the lightest weight most "wiki" solution.  :-) -- Adam.
 
->>> As a side note, the feature describe above (having a form not to add a page but to expand it in a formated way would be useful for other things when the content is short (timetracking, sub-todo list items, etc..) --[[hb]]
+>>> As a side note, the feature described above (having a form not to add a page but to expand it in a formated way) would be useful for other things when the content is short (timetracking, sub-todo list items, etc..) --[[hb]]
 
 I've been looking into this.  I'd like to implement a "blogcomments"
 plugin.  Looking at the code, I think the way to go is to have a
