web commit by JoshTriplett: Add the Relativistic Programming research wiki.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -12,6 +12,7 @@ Projects
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * The [maildirman wiki](http://svcs.cs.pdx.edu/maildirman)
 * The [linuxbierwanderung wiki/homepage](http://www.linuxbierwanderung.org)
+* The [Relativistic Programming research wiki](http://wiki.cs.pdx.edu/rp).
 
 Personal sites and blogs
 ========================
