--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,12 @@
+ikiwiki (1.51) unstable; urgency=low
+
+  Some wikis need to be rebuilt on upgrade to this version, due to changes to
+  page layout and the style sheet. If you listed your wiki in
+  /etc/ikiwiki/wikilist this will be done automatically when the Debian
+  package is upgraded. Or use ikiwiki-mass-rebuild to force a rebuild.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 15:50:36 -0400
+
 ikiwiki (1.50) unstable; urgency=low
 
   Permalinks and guids in rss and atom feeds for wikis using the usedirs
