--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Move the footer div to enclose tags and links too.
   * More style sheet updates, remove the hack that used the tags div to create
     the footer border.
+  * Due to template changes and style sheet changes that depend on them,
+    wiki rebuilds are recommended on upgrade to this version.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 15:48:03 -0400
 
