--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -37,3 +37,5 @@ to be the use of sidebars and google calendar in the affected wiki.
 >>>>> error of the disappearing pages.  --[[ScottHenson]]
 
 >>>>>> I can't reproduce any disappearing text. --[[Joey]]
+
+Marking this [[unreproducible|done]]. --[[Joey]]
