--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -23,7 +23,7 @@ Released 29 April 2006.
   3.5 times as fast as version 1.0)_ (./)
 * Improved [[todo/html]] stylesheets and templates.
 * Improved scalable [[logo]]. (./)
-* Support for at other revision control systems aside from svn.
+* Support for other revision control systems aside from svn.
   See [[about_rcs_backends]] _(status: supports git, tla, mercurial)_ (./)
 * Support for other markup languages than markdown
   _(status: done with rst, textile, etc. Markdown still works best though.)_
@@ -39,8 +39,7 @@ Released 29 April 2006.
 features and make other changes to the default configuration. Some things
 I'm considering:
 
-* Enabling OpenID by default.  (Would need to fix
-  [[bugs/login_page_non-obvious_with_openid]] first.)
+* Enabling OpenID by default (and disabling password logins by default).
 * Dropping GlobLists. However, they can lurk in preferences settings in wikis,
   which may make getting rid of them hard, and it may be worth keeping them
   so users can list pages without anding them together.
