* Avoid .svn directories when installing from svn checkout.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
     the footer border.
   * Due to template changes and style sheet changes that depend on them,
     wiki rebuilds are recommended on upgrade to this version.
+  * Avoid .svn directories when installing from svn checkout.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 15:48:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 18:47:38 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
