--- a/doc/todo/discussion_page_as_blog.mdwn
+++ b/doc/todo/discussion_page_as_blog.mdwn
@@ -22,7 +22,7 @@ foo/discussion/question/(discussion?)/answer page? Of course, rss feeds
 don't handle threading, and of course doing this might be dependant on the
 issue above. Worrying about threading may be overkill.
 
-> Something like [[sandbox/castle]] and [[sandbox/castle/discussion]]? (Sorry about the noise, btw.) --Ethan
+> Something like [[castle]] and [[castle/discussion]]? (Sorry about the noise, btw.) --Ethan
 
 I don't think that the nesting is very clear, I found it confusing..
 
