--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Due to template changes and style sheet changes that depend on them,
     wiki rebuilds are recommended on upgrade to this version.
   * Avoid .svn directories when installing from svn checkout.
+  * Fix sending of commit mails when new pages are added via the web.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 18:47:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 19:27:42 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
