--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -8,11 +8,11 @@ The best place to download a tarball of the latest release is from
 
 # packages
 
-If using Debian (any version), or Ubuntu edgy:
+If using Debian (since 4.0), or Ubuntu (since 7.04):
 
         apt-get install ikiwiki
 
-Note that Debian stable and especially Ubuntu edgy contain older versions of
+Note that Debian 4.0 and especially Ubuntu 7.04 contain older versions of
 ikiwiki, there have been lots of enhancements and bug fixes since those
 versions.
 
