new cia hostname

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -37,8 +37,8 @@ The source in subversion can be browsed
 [here](http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki).
 
 Commits to ikiwiki's source code are now fed into
-[CIA](http://cia.navi.cx/), and can be browsed, subscribed to etc on its
-[project page](http://cia.navi.cx/stats/project/ikiwiki). Note that changes
+[CIA](http://cia.vc), and can be browsed, subscribed to etc on its
+[project page](http://cia.vc/stats/project/ikiwiki). Note that changes
 to the documentation wiki are currently excluded.
 
 ## git
