* Add user(name) to the PageSpec for commit subscriptions.

--- a/doc/pagespec.mdwn
+++ b/doc/pagespec.mdwn
@@ -33,6 +33,8 @@ functions:
   was created
 * "`created_before(page)`" - match only pages created before the given page
   was created
+* "`user(name)`" - only available in page subscription preferences, match
+  only changes made by this user
 
 For example, to match all pages in a blog that link to the page about music
 and were written in 2005:
