--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-04-23 14:43-0400\n"
+"POT-Creation-Date: 2007-04-26 20:28-0400\n"
 "PO-Revision-Date: 2007-02-12 10:31+0100\n"
 "Last-Translator: Víctor Moral <victor@taquiones.net>\n"
 "Language-Team: spanish <es@li.org>\n"
@@ -106,7 +106,7 @@ msgstr "no he encontrado la plantilla %s"
 
 #: ../IkiWiki/Plugin/aggregate.pm:278
 #, perl-format
-msgid "invalid UTF-8 stripped from feed"
+msgid "(invalid UTF-8 stripped from feed)"
 msgstr ""
 
 #: ../IkiWiki/Plugin/aggregate.pm:283
