--- a/po/sv.po
+++ b/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ikiwiki\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-04-23 14:43-0400\n"
+"POT-Creation-Date: 2007-04-26 20:28-0400\n"
 "PO-Revision-Date: 2007-01-10 23:47+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -103,7 +103,7 @@ msgstr "mallen %s hittades inte"
 
 #: ../IkiWiki/Plugin/aggregate.pm:278
 #, perl-format
-msgid "invalid UTF-8 stripped from feed"
+msgid "(invalid UTF-8 stripped from feed)"
 msgstr ""
 
 #: ../IkiWiki/Plugin/aggregate.pm:283
