--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
     wiki rebuilds are recommended on upgrade to this version.
   * Avoid .svn directories when installing from svn checkout.
   * Fix sending of commit mails when new pages are added via the web.
+  * Add user(name) to the PageSpec for commit subscriptions.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 19:27:42 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 20:25:53 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
