--- a/po/bg.po
+++ b/po/bg.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ikiwiki-bg\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-04-23 14:43-0400\n"
+"POT-Creation-Date: 2007-04-26 20:28-0400\n"
 "PO-Revision-Date: 2007-01-12 01:19+0200\n"
 "Last-Translator: Damyan Ivanov <dam@modsodtsys.com>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
@@ -104,7 +104,7 @@ msgstr "шаблонът „%s” не е намерен"
 
 #: ../IkiWiki/Plugin/aggregate.pm:278
 #, perl-format
-msgid "invalid UTF-8 stripped from feed"
+msgid "(invalid UTF-8 stripped from feed)"
 msgstr ""
 
 #: ../IkiWiki/Plugin/aggregate.pm:283
