--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ikiwiki\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-04-23 14:43-0400\n"
+"POT-Creation-Date: 2007-04-26 20:28-0400\n"
 "PO-Revision-Date: 2007-02-17 12:07+0100\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
@@ -103,7 +103,7 @@ msgstr "šablona %s nebyla nalezena"
 
 #: ../IkiWiki/Plugin/aggregate.pm:278
 #, perl-format
-msgid "invalid UTF-8 stripped from feed"
+msgid "(invalid UTF-8 stripped from feed)"
 msgstr ""
 
 #: ../IkiWiki/Plugin/aggregate.pm:283
