--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -5,7 +5,7 @@
 [[if test="enabled(inline)"
      then="You can"
      else="If this wiki had the inline plugin enabled, you could"]]
-turn any page on this wiki into a weblog by using the `inline`
+turn any page on this wiki into a weblog by using the [[plugins/inline]]
 [[PreProcessorDirective]].  For example:
 
 	\[[inline pages="blog/* and !*/Discussion" show="10" rootpage="blog"]]
