--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -1,2 +1,4 @@
-Sorry, I know the title is ridiculously vague but I don't know what the proper name for “,”,…, etc are.
+Sorry, I know the title is ridiculously vague but I don't know what the
+proper name for “,”,…, etc are.
 
+> Well, they seem fine in this post? --[[Joey]]
