web commit by http://adam.shand.net/

--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -1,4 +1,9 @@
-Sorry, I know the title is ridiculously vague but I don't know what the
-proper name for “,”,…, etc are.
+It doesn't happen on ikiwiki.info but on my site if I enter any of the fancy typography characeters (“,”,…, etc) then when I save the page they are displayed as garbage characters.    I've put an example at the top of [this page](http://adam.shand.net/iki/sandbox.html).
+
+Sorry, I know the title is ridiculously vague for a bug but I don't know what the proper name the fancy typography characters are. :-/
+
+-- [[AdamShand]]
 
 > Well, they seem fine in this post? --[[Joey]]
+
+>> Damn that was fast, that save was just my first test to see if it effected ikiwiki! :-)   More info included now. -- Adam.
