web commit by http://adam.shand.net/: sorry link changed.

--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -1,4 +1,4 @@
-It doesn't happen on ikiwiki.info but on my site if I enter any of the fancy typography characeters (“,”,…, etc) then when I save the page they are displayed as garbage characters.    I've put an example at the top of [this page](http://adam.shand.net/iki/sandbox.html).
+It doesn't happen on ikiwiki.info but on my site if I enter any of the fancy typography characeters (“,”,…, etc) then when I save the page they are displayed as garbage characters.    I've put an example at the top of [this page](http://adam.shand.net/iki/2007/Test_for_possible_ikiwiki_bug.html?updated).
 
 Sorry, I know the title is ridiculously vague for a bug but I don't know what the proper name the fancy typography characters are. :-/
 
@@ -6,4 +6,4 @@ Sorry, I know the title is ridiculously vague for a bug but I don't know what th
 
 > Well, they seem fine in this post? --[[Joey]]
 
->> Damn that was fast, that save was just my first test to see if it effected ikiwiki! :-)   More info included now. -- Adam.
+>> Yowza that was fast, that save was just my first test to see if it effected ikiwiki! :-)   More info included now. -- Adam.
